--- a/views/operacion/index.phtml
+++ b/views/operacion/index.phtml
@@ -1,63 +1,106 @@
 <div class="container-fluid">
+  <h1 class="h3 mb-2 text-gray-800">Gesti&oacute;n de Talanquera</h1>
+  <div class="card shadow mb-4">
+    <div class="row">
+      <div class="col-lx-6 col-md-6">
 
-        <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Listado de Tarjetas Sin Salida</h1>
-        <!-- DataTales Example -->
-
-        <div class="card shadow mb-4">
+        <a 
+          onclick=
+            "confirmarProcedimiento('<?php echo BASE_URL.$this->_presentRequest->getControlador().'/'; ?>abrirTalanquera/1/',
+            'Por favor Confirmar para abrir Talanquera de Entrada...')"
+          style="cursor: pointer"
+        >
+          <div class="card border-left-primary shadow h-100 py-2">
+            <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                  <div class="text-lg font-weight-bold text-primary text-uppercase mb-1">Abrir Entrada</div>
+                </div>
+                <div class="col-auto">
+                  <i class="fas fa-angle-double-up fa-5x text-gray-300"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lx-6 col-md-6">
+      <a 
+        onclick=
+          "confirmarProcedimiento('<?php echo BASE_URL.$this->_presentRequest->getControlador().'/'; ?>abrirTalanquera/2/',
+          'Por favor Confirmar para abrir Talanquera de Salida...')"
+        style="cursor: pointer"
+      >
+        <div class="card border-left-success shadow h-100 py-2">
           <div class="card-body">
-            <div class="table-responsive">
-              <table class="table table-bordered" id="dataTableEsp" width="100%" cellspacing="0">
-                <thead>
-                  <tr>
-                    <th class="text-center">#</th>
-                    <th>Fecha</th>
-                    <th>Tarjeta</th>
-                    <th>Acciones</th>
-                  </tr>
-                </thead>
-                <tfoot>
-                  <tr>
-                    <th class="text-center">#</th>
-                    <th>Fecha</th>
-                    <th>Tarjeta</th>
-                    <th>Acciones</th>
-                  </tr>
-                </tfoot>
-                <tbody>
-                  <?php foreach ($this->ingresos as $key => $value) { ?>
-                  <?php $clase = ""; ?>
-                  <?php if($value->getFechaIngreso()->format('Y-m-d') == $this->fecha){ $clase = "table-warning"; } ?>
-                  <tr class="<?php echo $clase; ?>">
-                    <td class="text-center"><?php echo $key+1; ?></td>
-                    <td 
-                      data-order="<?php echo $value->getFechaIngreso()->format("U") ?>">
-                      <?php echo $value->getFechaIngreso()->format('d/m/Y h:i:s a'); ?>
-                    </td>
-                    <td>
-                      <?php echo $value->getIngresoTarjeta()[0]->getTarjeta()->getRfid()." - ".
-                      $value->getIngresoTarjeta()[0]->getTarjeta()->getCliente()->getNombre(); 
-                      ?>
-                    </td>
-                    <td style="text-align: center">
-                      <a 
-                        title="Dar Salida"
-                        style="cursor: pointer" 
-                        onclick=
-                          "confirmarProcedimiento('<?php echo BASE_URL.$this->_presentRequest->getControlador().'/'; ?>darSalida/<?php echo $value->getId(); ?>/' ,
-                          'Por favor Confirmar para Dar Salida a la Tarjeta...')">
-                          <span class='fas fa-angle-double-right'></span>
-                        </a>
-                    </td>
-                  </tr>
-                  <?php } ?>
-                </tbody>
-              </table>
+            <div class="row no-gutters align-items-center">
+              <div class="col mr-2">
+                <div class="text-lg font-weight-bold text-primary text-uppercase mb-1">Abrir Salida</div>
+              </div>
+              <div class="col-auto">
+                <i class="fas fa-angle-double-up fa-5x text-gray-300"></i>
+              </div>
             </div>
           </div>
         </div>
-
+      </a>
+    </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid">
+    <h1 class="h3 mb-2 text-gray-800">Listado de Tarjetas Sin Salida</h1>
+    <div class="card shadow mb-4">
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-bordered" id="dataTableEsp" width="100%" cellspacing="0">
+            <thead>
+              <tr>
+                <th class="text-center">#</th>
+                <th>Fecha</th>
+                <th>Tarjeta</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tfoot>
+              <tr>
+                <th class="text-center">#</th>
+                <th>Fecha</th>
+                <th>Tarjeta</th>
+                <th>Acciones</th>
+              </tr>
+            </tfoot>
+            <tbody>
+              <?php foreach ($this->ingresos as $key => $value) { ?>
+              <?php $clase = ""; ?>
+              <?php if($value->getFechaIngreso()->format('Y-m-d') == $this->fecha){ $clase = "table-warning"; } ?>
+              <tr class="<?php echo $clase; ?>">
+                <td class="text-center"><?php echo $key+1; ?></td>
+                <td 
+                  data-order="<?php echo $value->getFechaIngreso()->format("U") ?>">
+                  <?php echo $value->getFechaIngreso()->format('d/m/Y h:i:s a'); ?>
+                </td>
+                <td>
+                  <?php echo $value->getIngresoTarjeta()[0]->getTarjeta()->getRfid()." - ".
+                  $value->getIngresoTarjeta()[0]->getTarjeta()->getCliente()->getNombre(); 
+                  ?>
+                </td>
+                <td style="text-align: center">
+                  <a 
+                    title="Dar Salida"
+                    style="cursor: pointer" 
+                    onclick=
+                      "confirmarProcedimiento('<?php echo BASE_URL.$this->_presentRequest->getControlador().'/'; ?>darSalida/<?php echo $value->getId(); ?>/' ,
+                      'Por favor Confirmar para Dar Salida a la Tarjeta...')">
+                      <span class='fas fa-angle-double-right'></span>
+                    </a>
+                </td>
+              </tr>
+              <?php } ?>
+            </tbody>
+          </table>
+        </div>
       </div>
-
-
+    </div>
+  </div>
 </div>
