--- a/views/tarjeta/index.phtml
+++ b/views/tarjeta/index.phtml
@@ -71,7 +71,7 @@
             </div>
             <?php }else{ ?>
               <div class="alert alert-warning" role="alert">
-               No hay clientes registrados.
+               No hay tarjetas inactivas.
               </div>
             <?php } ?>
           </div>
