Añadiendo entidades y modales

--- a/views/pago/bathroom.phtml
+++ b/views/pago/bathroom.phtml
@@ -1,17 +1,17 @@
 <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Listado de Pagos Otros</h1>
+        <h1 class="h3 mb-2 text-gray-800">Listado de Pagos Servicio de Baño</h1>
         <!-- DataTales Example -->
 
         <div class="card shadow mb-4">
           <div class="card-header py-3">
             <div class="float-sm-right">
-              <a href="<?php echo BASE_URL ?>pago/registrarotro/" class="btn btn-primary btn-icon-split">
+              <a href="<?php echo BASE_URL ?>pago/registrarbathroom/" class="btn btn-primary btn-icon-split">
                 <span class="icon text-white-50">
                   <i class="fas fa-check"></i>
                 </span>
-                <span class="text">Registrar Pago Otro</span>
+                <span class="text">Registrar Pago Servicio Baño</span>
               </a>
             </div>
           </div>
