--- a/views/pago/bathroom.phtml
+++ b/views/pago/bathroom.phtml
@@ -37,7 +37,7 @@
                   <tr>
                     <th>#</th>
                     <th>Fecha</th>
-                    <th>Documento</th>
+                    <th>Tarjeta</th>
                     <th>Valor</th>
                     <th>Acciones</th>
                   </tr>
@@ -56,8 +56,8 @@
                   <tr>
                     <td><?php echo $key+1 ?></td>
                     <td data-order="<?php echo $value->getFecha()->format("U") ?>"><?php echo $value->getFecha()->format('d/m/Y h:i:s a'); ?></td>
-                    <td><?php echo $value->getDocumento(); ?></td>
-                    <td><?php echo $value->getTipoSancion()->getDescripcion(); ?></td>
+                    <td><?php echo $value->getTarjeta()->getRfid(); ?></td>
+                    <td><?php echo $value->getValor(); ?></td>
                     <td style="text-align: center">
                       <a
                        title="Descargar Factura" 
